change files url to work in gh

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           store.set('profile', JSON.stringify(profile));
           store.set('id_token', id_token);
 
-          location.href = '/files.html'
+          location.href = 'files.html'
       });
 
      </script>
