--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Auth0 With S3</title>
+    <title>Backendless Dropbox Clone</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/app.css" rel="stylesheet"><!--[if lt IE 9]>
@@ -12,8 +12,8 @@
     <div class="login-page clearfix">
       <div class="login-box">
         <div class="welcome-badge"></div>
-        <h1>Auth0 With S3</h1>
-        <h4>Simple upload example</h4><a href="#_" onclick="widget.signin()" class="btn btn-primary btn-lg"><i class="glyphicon glyphicon-user"></i><span>Login with Auth0</span></a>
+        <h1>Backendless Dropbox Clone</h1>
+        <h4>Auth0 + AWS S3</h4><a href="#_" onclick="widget.signin()" class="btn btn-primary btn-lg"><i class="glyphicon glyphicon-user"></i><span>Sign In</span></a>
       </div>
       <div class="get-auth0">
         <h3><span>Get started today with Auth0 for free</span><a href="" class="btn btn-success">Sign Up Now!</a></h3>
