--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h4>Auth0 + AWS S3</h4><a href="#_" onclick="widget.signin()" class="btn btn-primary btn-lg"><i class="glyphicon glyphicon-user"></i><span>Sign In</span></a>
       </div>
       <div class="get-auth0">
-        <h3><span>Get started today with Auth0 for free</span><a href="https://auth0.com" class="btn btn-success">Sign Up Now!</a></h3>
+        <h3><span>Get started today with Auth0 for free</span><a href="https://auth0.com" class="btn btn-success">Create Free Account</a></h3>
       </div>
     </div>
      <script src="//cdnjs.cloudflare.com/ajax/libs/store.js/1.3.14/store.min.js"></script>
