--- a/files.html
+++ b/files.html
@@ -59,7 +59,7 @@
           <td> <i class="glyphicon glyphicon-file"></i></td>
           <td> <a href="#_" class="file-item">{{name}}</a></td>
           <td>{{date}}</td>
-          <td><i title="Copy Link" data-key="{{key}}" data-toggle="tooltip" class="share-link glyphicon glyphicon-link"></i></td>
+          <td><i  data-key="{{key}}"  class="share-link glyphicon glyphicon-link"></i></td>
           <td><i title="Remove" data-key="{{key}}" class="remove glyphicon glyphicon-trash"></i></td>
         </tr>
       
