--- a/files.html
+++ b/files.html
@@ -23,8 +23,8 @@
         </header>
         <div class="col-xs-3">
           <div class="get-auth-left">
-            <div class="icon-badge"><img src="img/identification.png"></div>
-            <h3>Auth0</h3>
+            <a href="http://auth0.com" class="icon-badge"><img src="img/identification.png"></a>
+            <h3><a href="http://auth0.com">Auth0</a></h3>
             <p>Identity infrastructure, for developers.</p><a href="https://www.auth0.com" class="signup btn btn-success">Learn More</a>
           </div>
         </div>
