--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script><![endif]-->
   </head>
-  <body>
+  <body class="home">
     <div class="login-page clearfix">
       <div class="login-box">
         <div class="welcome-badge"></div>
