--- a/files.html
+++ b/files.html
@@ -57,7 +57,7 @@
       {{#each files}}
         <tr> 
           <td> <i class="glyphicon glyphicon-file"></i></td>
-          <td> <a href="#_" class="file-item">{{name}}</a></td>
+          <td> <a target="_blank" href="{{url}}" class="file-item">{{name}}</a></td>
           <td>{{date}}</td>
           <td><a  data-key="{{key}}"  class="share-link glyphicon glyphicon-link"></a></td>
           <td><i title="Remove" data-key="{{key}}" class="remove glyphicon glyphicon-trash"></i></td>
