--- a/files.html
+++ b/files.html
@@ -4,13 +4,15 @@
     <title>S3-box</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
+
+    <link href="drop-anywhere/build.css" rel="stylesheet">
     <link href="css/app.css" rel="stylesheet">
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
+  <body id="drop-here">
     <div class="files-page"> 
       <div class="container">
         <header class="site-header clearfix">
@@ -74,8 +76,30 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.5.1/moment.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
+    <script src="drop-anywhere/build.js"></script>
+
     <script src="js/files.js"></script>
     <script src="js/config.js"></script>
+
+    <script type="text/javascript">
+      var container = document.getElementById('drop-here');
+      var drop = DropAnywhere(function(e){
+        $('body').append('<img src="img/loading_black.gif" class="loading-global" />');
+        e.items.forEach(function(item) {
+
+          if (item) upload_file(bucket, item, function(err) {
+            if (err) console.log('error uploading file');
+
+            $('.loading-global').remove();
+
+          });
+        });
+
+
+        refresh_list(bucket);
+
+      });
+    </script>
 
     <script type="text/javascript">
       window.user = {
@@ -124,8 +148,14 @@
 
         bind_upload(bucket);
         refresh_list(bucket); 
+
+  
+
+
       });
-      
+
+
+
     </script>      
   </body>
 </html>
