--- a/files.html
+++ b/files.html
@@ -15,6 +15,7 @@
   <body id="drop-here">
     <div class="files-page"> 
       <div class="container">
+        
         <header class="site-header clearfix">
           <div class="col-xs-4">
             <h1> <a href="">S3-box</a></h1>
@@ -23,14 +24,10 @@
             <div class="login-info"></div>
           </div>
         </header>
-        <div class="col-xs-3">
-          <div class="get-auth-left">
-            <a href="http://auth0.com" class="icon-badge"><img src="img/identification.png"></a>
-            <h3><a href="http://auth0.com">Auth0</a></h3>
-            <p>Identity infrastructure, for developers.</p><a href="https://www.auth0.com" class="signup btn btn-success">Learn More</a>
-          </div>
-        </div>
-        <div class="col-xs-9">
+        
+
+
+        <div class="col-sm-9 right">
           <div class="files-list"><input type="file" class="upload-file" style="display:none"><a href="#_" class="btn btn-primary upload-button"><i class="glyphicon glyphicon-cloud-upload"> </i><span>Upload Files</span></a>
             <h3>Your files</h3>
             <table class="table">
@@ -49,8 +46,20 @@
             </table>
           </div>
         </div>
+
+
+        <div class="col-sm-3 left">
+          <div class="get-auth-left">
+            <a href="http://auth0.com" class="icon-badge"><img src="img/identification.png"></a>
+            <h3><a href="http://auth0.com">Auth0</a></h3>
+            <p>Identity infrastructure, for developers.</p><a href="https://www.auth0.com" class="signup btn btn-success">Learn More</a>
+          </div>
+        </div>
+
+
       </div>
     </div>
+
     <script id="login-info-template" type="text/x-handlebars-template">
       <img src="{{avatar}}"><span>Welcome {{name}}</span>, <a href="#_" class="logout">Logout</a>
     </script>
