--- a/files.html
+++ b/files.html
@@ -61,7 +61,7 @@
     </div>
 
     <script id="login-info-template" type="text/x-handlebars-template">
-      <img src="{{avatar}}"><span>Welcome {{name}}</span>, <a href="#_" class="logout">Logout</a>
+      <img src="{{avatar}}"><span>Welcome {{name}} </span> <a href="#_" class="logout">Logout</a>
     </script>
     
     <script id="files-template" type="text/x-handlebars-template">
