--- a/files.html
+++ b/files.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>S3-box</title>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
 
