--- a/files.html
+++ b/files.html
@@ -19,7 +19,7 @@
         
         <header class="site-header clearfix">
           <div class="col-xs-4">
-            <h1> <a href="">S3-box</a></h1>
+            <h1><a href="">S3-box</a></h1>
           </div>
           <div class="col-xs-8">
             <div class="login-info"></div>
@@ -51,8 +51,7 @@
 
         <div class="col-sm-3 left">
           <div class="get-auth-left">
-            <a href="http://auth0.com" class="icon-badge"><img src="img/identification.png"></a>
-            <h3><a href="http://auth0.com">Auth0</a></h3>
+            <a href="http://auth0.com" ><img src="https://auth0.com/boot/img/logo.svg"></a>
             <p>Identity infrastructure, for developers.</p><a href="https://www.auth0.com" class="signup btn btn-success">Learn More</a>
           </div>
         </div>
