--- a/files.html
+++ b/files.html
@@ -77,7 +77,7 @@
       {{/each}}
     </script>
     <script src="//sdk.amazonaws.com/js/aws-sdk-2.0.0-rc1.min.js"></script>
-    <script src="//cdn.auth0.com/w2/auth0-1.6.4.min.js"></script>
+    <script src="//cdn.auth0.com/w2/auth0-2.1.4.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/store.js/1.3.14/store.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.3.0/handlebars.min.js"></script>
