use widget 4.0 and minors

--- a/files.html
+++ b/files.html
@@ -51,7 +51,7 @@
 
         <div class="col-sm-3 left">
           <div class="get-auth-left">
-            <a href="http://auth0.com" ><img src="https://auth0.com/boot/img/logo.svg"></a>
+            <a href="http://auth0.com" ><img src="https://auth0.com/auth0-styleguide/img/logo.png"></a>
             <p>Identity infrastructure, for developers.</p><a href="https://www.auth0.com" class="signup btn btn-success">Learn More</a>
           </div>
         </div>
