--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
       <div class="login-box">
         <div class="welcome-badge"></div>
         <h1>Backendless Dropbox Clone</h1>
-        <h4>Auth0 + AWS S3</h4><a href="#_" onclick="widget.signin()" class="btn btn-primary btn-lg"><i class="glyphicon glyphicon-user"></i><span>Sign In</span></a>
+        <h4>Auth0 + AWS S3</h4><a href="#_" onclick="login()" class="btn btn-primary btn-lg"><i class="glyphicon glyphicon-user"></i><span>Sign In</span></a>
       </div>
       <div class="get-auth0">
         <h3><span>Get started today with Auth0 for Free</span><a href="https://auth0.com" class="btn btn-success">Create Free Account</a></h3>
       </div>
     </div>
      <script src="//cdnjs.cloudflare.com/ajax/libs/store.js/1.3.14/store.min.js"></script>
-     <script src="https://cdn.auth0.com/w2/auth0-widget-2.6.min.js"></script>
+     <script src="https://cdn.auth0.com/w2/auth0-widget-4.0.min.js"></script>
      <script src="js/config.js"></script>
 
      <script>
@@ -33,13 +33,14 @@
         callbackOnLocationHash: true
       });
 
-      widget.getProfile(window.location.hash, function (err, profile, id_token, access_token, state) {
-        store.set('profile', JSON.stringify(profile));
-        store.set('id_token', id_token);
+      function login() {
+        widget.signin({popup: true, sso: false}, null, function(err, profile, id_token, access_token, state) {
+          store.set('profile', JSON.stringify(profile));
+          store.set('id_token', id_token);
 
-        location.href = 'files.html'
-      });
-
+          location.href = 'files.html'
+        });
+      }
      </script>
   </body>
 </html>
